# copernicus_minimal

./: Dockerfile_minimal  README.md  docker-compose-copernicus.yml  entrypoint.sh  env_basic.yml  pyproject.toml
copernicus_minimal/: run_copernicus_weather_downloader_minimal.py
