[tool.poetry]
name = "copernicus_minimal"
version = "0.0.1"
description = ""
authors = ["'Optimum Voyage' <info@optimumvoyage.com>"]
packages = [
    { include = "copernicus_minimal" },
    { include = "copernicus_minimal/*.py" },
]

[[tool.poetry.source]]
name = "pypi.org"
url = "https://pypi.org/simple"
priority = "default"

[tool.poetry.dependencies]
python = "~3.12.2"
copernicusmarine = "^1.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
